objects/SCP_Certa_GC__Business_Landscape__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Landscapes</relationshipLabel>
        <relationshipName>Business_Landscapes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__AnnualSpend__c</fullName>
        <label>Gastos Anuales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Category_Service__c</fullName>
        <label>Categoria de los servicios</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones unificadas y servicios de colaboración</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Otros servicios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Compra_a_nivel__c</fullName>
        <label>Compra a nivel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__ContractEndDate__c</fullName>
        <label>Fecha de fin de contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Country__c</fullName>
        <label>Pais</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CurrentProvider__c</fullName>
        <label>Proveedor Actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Decision_maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Landscapes</relationshipLabel>
        <relationshipName>Business_Landscapes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Level__c</fullName>
        <label>Nivel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__NumberOfChannels__c</fullName>
        <label>Numero de Canales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__OtherInformation__c</fullName>
        <label>Otra Información</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Service__c</fullName>
        <label>Servicios</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SCP_Certa_GC__Category_Service__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gestión de Servicios Móviles</fullName>
                </value>
                <value>
                    <fullName>Unificación de Comunicaciones y Servicios de Colaboración</fullName>
                </value>
                <value>
                    <fullName>Almacenamiento</fullName>
                </value>
                <value>
                    <fullName>laaS &amp; PaaS</fullName>
                </value>
                <value>
                    <fullName>Gestión de Servicios Cloud</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Enterprise Mobile IT</fullName>
                </value>
                <value>
                    <fullName>Seguridad cibernética</fullName>
                </value>
                <value>
                    <fullName>Seguridad Mgmt</fullName>
                </value>
                <value>
                    <fullName>Seguridad en Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Seguridad Cloud</fullName>
                </value>
                <value>
                    <fullName>Identidad &amp; Privacidad</fullName>
                </value>
                <value>
                    <fullName>Conectividad IoT</fullName>
                </value>
                <value>
                    <fullName>Smart Mobility</fullName>
                </value>
                <value>
                    <fullName>Smart Cities</fullName>
                </value>
                <value>
                    <fullName>Smart Retail</fullName>
                </value>
                <value>
                    <fullName>Nuevo Negocio IoT</fullName>
                </value>
                <value>
                    <fullName>Smart Steps</fullName>
                </value>
                <value>
                    <fullName>Smart Digits</fullName>
                </value>
                <value>
                    <fullName>Servicios de Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Sub_Category_Service__c</fullName>
        <label>No se usa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M2M</fullName>
                </value>
                <value>
                    <fullName>Soluciones de conectividad</fullName>
                </value>
                <value>
                    <fullName>Gestión de servicios</fullName>
                </value>
                <value>
                    <fullName>Servicios WAN</fullName>
                </value>
                <value>
                    <fullName>Servicio de Internet</fullName>
                </value>
                <value>
                    <fullName>Soluciones de Productividad</fullName>
                </value>
                <value>
                    <fullName>Consultas y soluciones de integración</fullName>
                </value>
                <value>
                    <fullName>Servicios unificados de comunicación</fullName>
                </value>
                <value>
                    <fullName>Servicios de conferencias</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Landscape</label>
    <nameField>
        <label>Nombre de Business Landscape</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Landscapes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>